P4ADEV-2441 fix pr
