# src/main/java/it/gov/pagopa/pu/workflow/controller/SendNotificationControllerImpl.java
@@ -24,4 +24,12 @@ public class SendNotificationControllerImpl implements SendNotificationApi {
     WorkflowCreatedDTO createWorkflowResponseDTO = service.sendNotificationProcess(sendNotificationId);
     return new ResponseEntity<>(createWorkflowResponseDTO, HttpStatus.OK);
   }
+
+  @Override
+  public ResponseEntity<WorkflowCreatedDTO> retrieveNotificationDate(String sendNotificationId) {
+    log.info("Starting notification date retrieve for sendNotificationId: {}", sendNotificationId);
+    WorkflowCreatedDTO createWorkflowResponseDTO = service.sendNotificationDateRetrieve(sendNotificationId);
+    return new ResponseEntity<>(createWorkflowResponseDTO, HttpStatus.OK);
+  }
+
 }
